# sig

./: .gitignore  README.md
sig-py/: README.md  pyproject.toml
sig-py/.sig/: audit.jsonl
sig-py/src/sig/: __init__.py  cli.py  mcp_server.py  types.py
sig-py/src/sig/core/: audit.py  config.py  content.py  fs.py  hash.py  paths.py  persistent_content.py  sign.py  store.py  verify.py
sig-py/src/sig/templates/: engines.py
sig-py/tests/: conftest.py  test_audit.py  test_content.py  test_engines.py  test_hash.py  test_persistent_content.py  test_sign.py  test_store.py  test_verify.py
sig-ts/: README.md  package-lock.json  package.json  tsup.config.ts
sig-ts/src/: index.ts  types.ts
sig-ts/src/cli/: audit.ts  chain.ts  check.ts  index.ts  init.ts  list.ts  policy.ts  sign.ts  status.ts  update.ts  verify.ts
sig-ts/src/core/: audit.ts  chain.ts  config.ts  content.ts  fs.ts  hash.ts  paths.ts  persistent-content.ts  policy.ts  sign.ts  store.ts  update.ts  verify.ts
sig-ts/src/mcp/: server.ts
sig-ts/src/templates/: engines.ts
sig-ts/tests/core/: audit.test.ts  chain.test.ts  content.test.ts  engines.test.ts  persistent-content.test.ts  policy.test.ts  sign.test.ts  store.test.ts  update.test.ts  verify.test.ts
sig-ts/tests/fixtures/templates/: bash-script.txt  mlld-prompt.txt  review.txt
