[project]
name = "disreguard-sig"
version = "0.2.0"
description = "Sign and verify prompt templates for AI agent security"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastmcp>=2.0,<3",
]

[project.scripts]
sig = "sig.cli:cli"
sig-mcp = "sig.mcp_server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sig"]
